--- a/config-repo/configtest-pro.properties
+++ b/config-repo/configtest-pro.properties
@@ -1,1 +1,1 @@
-word=hello world! change now production 2020-4-16 9:47 10:02 11:54 12:07
+word=hello world! change now production 2020-4-16 9:47 10:02 11:54 12:07 13:32
